2012-05-23 v1.1-8
  + Distance function changed from dist to robustDist: NA values will be replaced by the maximum value of the distance matrix

2012-04-30 v1.1-7
  + featureFile of coverage-plot.Rscript can use either tab or space as column delimiters
  + inst/extdata/test-coverage-plot-featureInfo.txt uses a correct format

2012-04-15 v1.1-6
  + Add exprs-boxplot.Rscript to draw matrix-like boxplots from command line

2012-04-02 v1.1-5
  + coverage-plot.Rscript supports now sequence annotation

2012-03-19 v1.1-4
  + Add -featurefile option to the coverage-plot.Rscript to allow drawing exon boundary lines.
  + partial matching of the parameter unit (should be units) in the strwidth function called by biosHeatmap is solved

2012-03-09 v1.1-3
  + Add coverage-plot.Rscript in the Rscript directory.

2012-02-14 v1.1-2
  + biosHeatmap.Rscript uses Ward as the default clustering method, replacing the "Complete" method. Thanks to the suggestion by Gonzalo.

2011-12-08 v1.1.1
  + inst/Rscript/geneset_xyplot.Rscript adds dependency on the ribiosIO package
  + inst/Rscript/geneset_xyplot.Rscript now makes sure the rownames are not duplicated
  + To Do:  inst/Rscript/geneset_xyplot.Rscript needs a test file and a test bash script

2011-12-02 v1.1.0
  + Add whiteblueblackheat to three-color palettes (which is actually a higher-than-three color system)

2011-11-23 v1.0.9
  + Add whiteblack and blackwhite to two-color palettes

2011-11-22 v1.0.8
  + Add guessWH function to automatically guess the width/heigh ratio of heatmaps
  + Margins are automatically determined smartly, dependent on the xlab/ylab 

2011-11-17 v1.0.7
  + biosHeatmap.Rscript: the options lwids and lheis are obsolete, since they are now exclusively determined by the input data, namely matrix dim and row/col name character lengths, with considering the minimum size of legend
  + Wunschzettel: Check so-called all-NA lines and warns user; clustering algorithm should be made robust to all NAs.

2011-11-16 v1.0.6